--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+#       # Runs a single command using the runners shell
+#       - name: Run a one-line script
+#         run: echo Hello, world!
         
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           sudo cp /var/www/html/index.html /var/www/index.html,
-          sudo nmkdir /var/www/html/test.
+          sudo mkdir /var/www/html/test.
