--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo cp /var/www/html/index.html /var/www/index.html,
-          sudo mkdir /var/www/html/test
+          sudo cp /var/www/html/index.html /var/www/index.html
